update CD experience

--- a/tex/resume-johnny-tran.tex
+++ b/tex/resume-johnny-tran.tex
@@ -134,7 +134,7 @@
       Designed and implemented infrastructure as code (IaC) tooling to automate, manage, and provision UKG Pro Coaching \& Development application using Kubernetes and Google Cloud Platform, deploying 50 services to achieve production-readiness of the first US region.
     }
     \experience{
-      Accelerated product release capabilities by establishing DevOps guardrails for continuous delivery, improved change lead time from weeks to days, and increased deployment frequency from quarterly to biweekly.
+      Accelerated product release capabilities by establishing DevOps guardrails for continuous deployment, improved change lead time from weeks to days, and increased deployment frequency from quarterly to biweekly.
     }
   \experienceEnd{}
 
