add ai and llm experience

--- a/tex/resume-johnny-tran.tex
+++ b/tex/resume-johnny-tran.tex
@@ -100,7 +100,7 @@
     {Hybrid Remote}
   \experienceStart{}
     \experience{
-      Led a high-performing distributed team of 7+ software and quality engineers to release quarterly roadmap product deliverables and maintain enterprise SaaS systems for  Conversations \& Feedback modules in the UKG Pro Performance \& Coaching product suite.
+      Managed a high-performing distributed team of 7+ software and quality engineers to release quarterly roadmap product deliverables and maintain enterprise SaaS systems for  Conversations \& Feedback modules in the UKG Pro Performance \& Coaching product suite.
     }
     \experience{
       Directed end-to-end planning and execution of the software development lifecycle (SDLC) for multiple Epics, collaborated hands-on with engineers to assess and refine major technical decisions, improving team velocity by 15\% over two program increments.
@@ -109,7 +109,13 @@
       Facilitated collaboration leveraging SAFe Agile methodologies to align product vision across cross-functional stakeholders teams, planned product roadmaps, and overcame project challenges to meet critical milestones, achieving an 85\% program increment completion rate.
     }
     \experience{
+      Delivered Zero-to-One integration of Google Vertex AI capabilities into Performance Review product, partnering with Data Science teams to design and implement GenAI-powered summarization features, successfully launched to production within six-month roadmap.
+    }
+    \experience{
       Spearheaded engineering initiatives to migrate microservices architecture from CQRS to a scalable Transactional Outbox pattern implemented using internal Kotlin SDK, reducing system complexity by 25\% while improving developer experience satisfaction by 20\%.
+    }
+    \experience{
+      Accelerated adoption of AI-assisted software development by coaching teams on leveraging Microsoft/GitHub Copilot, defined strategic innovation goals for embedding AI tools into daily workflows, boosted AI engagement rate to 70\% of engineers across four squads, and reduced coding cycle time by 10\% over one quarter.
     }
     \experience{
       Streamlined release management process across four teams by standardizing deployment best practices and implementing thorough change approval processes, ensuring smoother rollouts by minimizing deployment failures and rollback incidents by 50\%.
@@ -117,9 +123,9 @@
     \experience{
       Triaged production defects, managed incident resolution with SREs, performing root cause analysis, and actioned observability changes in DataDog, Grafana, and PagerDuty, reduced mean response time for major after-hours incidents to less than 30 minutes.
     }
-    \experience{
-      Coached and mentored engineers at various levels, leveraging regular 1:1 meetings to set professional goals and deliver actionable performance feedback, achieving a 100\% manager satisfaction score on quarterly engagement surveys.
-    }
+    % \experience{
+    %   Coached and mentored engineers at various levels, leveraging regular 1:1 meetings to set professional goals and deliver actionable performance feedback, achieving a 100\% manager satisfaction score on quarterly engagement surveys.
+    % }
     \experience{
       Supported team members’ career development by cultivating technical skills and leadership capabilities, advocated for the promotion of 20\% of direct reports to engineering lead roles, and achieved a 95\% employee retention rate over 3 years.
     }
@@ -157,7 +163,7 @@
     {Remote}
   \experienceStart{}
     \experience{
-      Led cross-functional distributed engineering teams of 7+ using Kanban methodology to decouple Continuous Feedback features from Employee Voice Python2 monolith into microservices platform, successfully orchestrated cut-over migration for over 100 tenants, implemented using Angular, Axon, Cloud Foundry, GraphQL, Java, MongoDB, RabbitMQ, and Spring Boot.
+      Led cross-functional distributed engineering teams of 7+ using Kanban methodology to decouple application from Python2 monolith into Spring Boot microservices, transitioning integration of natural language processing (NLP) and sentiment analysis APIs to cloud-native platform, successfully orchestrated cut-over migration to new architecture for over 100 enterprise tenants.
     }
   \experienceEnd{}
 
@@ -167,7 +173,7 @@
     {Remote}
   \experienceStart{}
     \experience{
-      Collaborated with Product, Data Scientists, and Data Platform teams to launch an employee retention risk dashboard and ML predictive model trained on UltiPro employment data using Apache Hadoop, NumPy, Pandas, Python, and scikit-learn.
+      Collaborated with Product, Data Scientists, and Data Platform teams to launch an employee retention risk dashboard and machine learning (ML) predictive model trained on UltiPro employment data using Apache Hadoop, NumPy, Pandas, Python, and scikit-learn.
     }
     \experience{
       Engaged with Product and Engineering stakeholders using Domain-Driven Design approaches to define bounded contexts and aggregates for new UltiPro Payroll and People features, reducing system complexity by 30\% through business-aligned domain modeling.
@@ -200,7 +206,7 @@
   \skills{Databases}
     {Elasticsearch, InfluxDB, MongoDB, MySQL, PostgreSQL, Redis}
   \skills{Technologies}
-    {Angular, Ansible, Apache Kafka, Bash, Bitbucket, Cloud Foundry, Concourse, Confluence, Cypress, DataDog, Docker, Gatling, Git, GitHub, GitHub Actions, Google Cloud Platform, Gradle, Grafana, GraphQL, HTML/CSS,  Jasmine, Javalin, JetBrains IDEs, Jira, JMeter, JUnit, Kibana, Kubernetes (k8s), LaTeX, LaunchDarkly, Linux/Unix, Looker, LucidCharts, Markdown, Maven, Microsoft 365, Node.js, OAuth2, OIDC, PagerDuty, PlantUML, Postman, Prometheus, RabbitMQ, Slack, SonarQube, Spring Boot, Spring Framework, TeamCity, TestRail}
+    {Angular, Ansible, Apache Kafka, Bash, Bitbucket, Cloud Foundry, Concourse, Confluence, Cypress, DataDog, Docker, Gatling, Generative AI (GenAI), Git, GitHub, GitHub Actions, Google Cloud Platform (GCP), Gradle, Grafana, GraphQL, HTML/CSS, Jasmine, Javalin, JetBrains IDEs, Jira, JMeter, JUnit, Kibana, Kubernetes (k8s), Large Language Models (LLM), LaTeX, LaunchDarkly, Linux/Unix, Looker, LucidCharts, Markdown, Maven, Microsoft 365, Node.js, OAuth2, OIDC, PagerDuty, PlantUML, Postman, Prometheus, RabbitMQ, Slack, SonarQube, Spring Framework, TeamCity, TestRail}
 \end{itemize}
 
 \end{document}
