fix month abbreviation

--- a/tex/resume-johnny-tran.tex
+++ b/tex/resume-johnny-tran.tex
@@ -132,7 +132,7 @@
   \experienceEnd{}
 
   \experienceHeading{Principal Software Engineer}
-    {June 2021 --- Dec 2021}
+    {June 2021 --- Dec. 2021}
     {UKG}
     {Remote}
   \experienceStart{}
