add intuit draft

--- a/tex/resume-johnny-tran.tex
+++ b/tex/resume-johnny-tran.tex
@@ -9,6 +9,7 @@
 \usepackage[top=0.5in,bottom=0.5in,left=0.5in,right=0.5in]{geometry}
 \usepackage[hidelinks]{hyperref}
 \usepackage{latexsym}
+\usepackage{lipsum}
 \usepackage{marvosym}
 \usepackage[default]{sourcesanspro}
 \usepackage{tabularx}
@@ -94,6 +95,16 @@
 
 \section{Experience}
 \subsectionStart{}
+  \experienceHeading{Staff Software Engineer}
+    {July 2025 --- Present}
+    {Intuit}
+    {San Diego, CA}
+  \experienceStart{}
+    \experience{
+      \lipsum[1]
+    }
+  \experienceEnd{}
+
   \experienceHeading{Software Engineering Manager}
     {Dec. 2021 --- Sept. 2024}
     {UKG}
